# THKazan23

./: Dockerfile  docker-compose.yml  pyproject.toml
data/: class_index2class_name.json  log_type2class_index.json
prometheus/: prometheus.yml
research/: ErrorLookUpTable.xlsx  TenderHack2023_InnTeam.ipynb
src/: dependencies.py  main.py  settings.py
src/postgres/: database.py
src/postgres/models/: category.py  error.py  error_notification.py  log_info.py  raw_log.py
src/postgres/repositories/: category.py  error.py  error_notification.py  log_info.py  raw_log.py
src/routers/: dashboard.py  metrics.py  service.py
src/schemas/: category.py  error.py  error_notification.py  log_info.py  raw_log.py
src/schemas/routes/: dashboard.py  service.py
src/services/: classifier.py  mail.py  metrics.py
src/utils/: metrics.py
