[tool.poetry]
name = "thkazan23"
version = "0.1.0"
description = ""
authors = ["Egor Kuziakov <egor.kuziakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.9"
prometheus-client = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
